templates/fdi-search-api_template.yaml
---
# Source: fdi-search-api/templates/svc/portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: fdi-search-api
  labels:
    app.kubernetes.io/name: fdi-search-api
    helm.sh/chart: fdi-search-api-1.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: fdi-search-api
  selector:
    app.kubernetes.io/name: fdi-search-api
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: fdi-search-api
---
# Source: fdi-search-api/templates/deploy/portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdi-search-api
  labels:
    app.kubernetes.io/name: fdi-search-api
    helm.sh/chart: fdi-search-api-1.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-search-api
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: fdi-search-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fdi-search-api
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: fdi-search-api
    spec:
      containers:
        - name: fdi-search-api
          image: "repo:v3.0.2"
          imagePullPolicy: Always
          ports:
            - name: fdi-search-api
              containerPort: 8000
              protocol: TCP
          command: ["sh"]
          args: ["-c", "python setup.py develop && daaas run --host 0.0.0.0 --port 8000"]
          resources:
            {}
      imagePullSecrets:
        - name: image
---
# Source: fdi-search-api/templates/ing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdi-search-api
  labels:
    app.kubernetes.io/name: fdi-search-api
    helm.sh/chart: fdi-search-api-1.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "host"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: fdi-search-api
                port: 
                  number: 8000
---
# Source: fdi-search-api/templates/dr/destrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fdi-search-api
  labels:
    app: fdi-search-api
    chart: fdi-search-api-1.0.0
    release: release-name
    heritage: Helm
spec:
  host: "fdi-search-api.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: "DISABLE"
